--- a/package.json
+++ b/package.json
@@ -9,15 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@gluestack-style/react": "^1.0.48",
+    "@gluestack-ui/config": "^1.1.16",
+    "@gluestack-ui/themed": "^1.1.9",
     "expo": "~50.0.8",
+    "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-native": "0.73.4",
+    "react-native-svg": "^13.4.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-test-renderer": "^18.0.7",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
